feat: add timer + cells colored counter

--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -48,3 +48,13 @@ body {
 .color {
   background-color: #000;
 }
+
+.time {
+  width: 100px;
+  height: 100px;
+}
+
+.score {
+  width: 100px;
+  height: 100px;
+}
