--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -99,3 +99,31 @@ body {
   cursor: pointer;
   font-size: 0.8em;
 }
+
+.mainPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.title {
+  margin-bottom: 100px;
+  font-size: 1.5em;
+}
+
+.easy,
+.medium,
+.hard,
+.random {
+  margin-bottom: 15px;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.cross {
+  background-image: url("./icon/free-icon-delete-cross-67345.png");
+  background-size: cover;
+}
