--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -105,7 +105,8 @@ body {
   font-size: 0.8em;
 }
 
-.mainPage {
+.mainPage,
+.choosePicMenu {
   display: flex;
   flex-direction: column;
   align-items: center;
